configuracao do eclipce

--- a/Projeto feira/inscricao.html
+++ b/Projeto feira/inscricao.html
@@ -3,7 +3,7 @@
 		<meta charset="utf-8"> </meta>
 		<title>Projeto-Feira</title> 
 	</head> 
-	<body bgcolor="red">
+	<body bgcolor="yellow">
 		<center>Formulario de Inscrição</center> <br><br>
 		<form>
 			<INPUT TYPE="text" placeholder=Nome SIZE="100" MAXLENGTH="60" id="nome"><br>	
