--- a/Projeto feira/inscricao.html
+++ b/Projeto feira/inscricao.html
@@ -4,6 +4,7 @@
 <title>Inscrição do Centro Interesse</title>
 <!-- As duas linhas baixo servem para importar o bootstrap -->
 <link href="bootstrap-3.3.6/css/bootstrap.min.css" rel="stylesheet">
+
 <script src="bootstrap-3.3.6/js/bootstrap.min.js"></script>
 
 <link rel="stylesheet" type="text/css" href="style.css" />
@@ -11,9 +12,9 @@
 <body>
 	<div class="container">
 		<h1 class="thumbnail" id="h1-inscricao"> Inscrição
-			do Centro Interesse</h1>
-		<form>
-
+			do Centro Interesse</h1> 
+         <form id="formulario" action="salvarinscricao.php" role="form">
+			
 			<div class="form-group">
 				<label for="nome">Nome </label>
 				<INPUT TYPE="text" class="form-control" placeholder="Insira..." id="nome" />
