--- a/Projeto feira/inscricao.html
+++ b/Projeto feira/inscricao.html
@@ -13,7 +13,7 @@
 	<div class="container">
 		<h1 class="thumbnail" id="h1-inscricao"> Inscrição
 			do Centro Interesse</h1> 
-         <form id="formulario" action="salvarinscricao.php" role="form">
+         <form id="formulario" action="salvarinscricao.php" role="post">0 
 			
 			<div class="form-group">
 				<label for="nome">Nome </label>
