--- a/Projeto feira/inscricao.html
+++ b/Projeto feira/inscricao.html
@@ -21,14 +21,14 @@
 			</div>
 			<div class="form-group">
 				<label for="codigo-do-aluno">Código do aluno: </label>
-				<INPUT TYPE="text" class="form-control" placeholder="Insira..." id="codigo-do-aluno" name="codigodoaluno" />
+				<INPUT TYPE="text" class="form-control" placeholder="Insira..." id="codigo-do-aluno" name="meucodigo" />
 			</div>
 			<div class="form-group">
 				<label for="turma">Turma:</label>
-				<input type="turma" class="form-control" placeholder="Insira..." id="turma" name="turma" />
+				<input type="text" class="form-control" placeholder="Insira..." id="turma" name="turma" />
 			</div>
 			<div class="form-group">
-				<label for="CENTRO DE INTERESSE1">CENTRO DE INTERESSE 1:</label> 
+				<label for="CENTRODEINTERESSE1">CENTRO DE INTERESSE 1:</label> 
 				<SELECT
 					ID="centrodeinsteresse" name="opcao1"  class="form-control">
 					<OPTION VALUE="Insira...">Insira...</option>
@@ -41,10 +41,10 @@
 				</SELECT>
 			</div>
 			<div class="form-group">
-				<label for="CENTRO DE INTERESSE2">CENTRO DE INTERESSE 2:</label>
+				<label for="CENTRODEINTERESSE2">CENTRO DE INTERESSE 2:</label>
 				
 				<SELECT
-					ID="centrodeinsteresse"name="opcao2" class="form-control">
+					ID="centrodeinsteresse" name="opcao2" class="form-control">
 					<OPTION VALUE="Insira...">Insira...</option>
 					<OPTION VALUE="0">Música</option>
 					<OPTION VALUE="1">Teatro</option>
