atualizacao do php!

--- a/Projeto feira/inscricao.html
+++ b/Projeto feira/inscricao.html
@@ -13,7 +13,7 @@
 	<div class="container">
 		<h1 class="thumbnail" id="h1-inscricao"> Inscrição
 			do Centro Interesse</h1> 
-         <form id="formulario" action="salvarinscricao.php" role="post"> 
+         <form id="formulario" action="salvarinscricao.php" method="post"> 
 			
 			<div class="form-group">
 				<label for="nome">Nome:</label>
@@ -31,13 +31,13 @@
 				<label for="CENTRODEINTERESSE1">CENTRO DE INTERESSE 1:</label> 
 				<SELECT
 					ID="centrodeinsteresse" name="opcao1"  class="form-control">
-					<OPTION VALUE="Insira...">Insira...</option>
-					<OPTION VALUE="0">Música</option>
-					<OPTION VALUE="1">Teatro</option>
-					<OPTION VALUE="2">Espanhol</option>
-					<OPTION VALUE="3">Inglês</option>
-					<OPTION VALUE="4">Dança</option>
-					<OPTION VALUE="5">futsal</option>
+					<OPTION VALUE="0">Insira...</option>
+					<OPTION VALUE="1">Música</option>
+					<OPTION VALUE="2">Teatro</option>
+					<OPTION VALUE="3">Espanhol</option>
+					<OPTION VALUE="4">Inglês</option>
+					<OPTION VALUE="5">Dança</option>
+					<OPTION VALUE="6">futsal</option>
 				</SELECT>
 			</div>
 			<div class="form-group">
@@ -45,13 +45,13 @@
 				
 				<SELECT
 					ID="centrodeinsteresse" name="opcao2" class="form-control">
-					<OPTION VALUE="Insira...">Insira...</option>
-					<OPTION VALUE="0">Música</option>
-					<OPTION VALUE="1">Teatro</option>
-					<OPTION VALUE="2">Espanhol</option>
-					<OPTION VALUE="3">Inglês</option>
-					<OPTION VALUE="4">Dança</option>
-					<OPTION VALUE="5">Futsal</option>
+					<OPTION VALUE="0">Insira...</option>
+					<OPTION VALUE="1">Música</option>
+					<OPTION VALUE="2">Teatro</option>
+					<OPTION VALUE="3">Espanhol</option>
+					<OPTION VALUE="4">Inglês</option>
+					<OPTION VALUE="5">Dança</option>
+					<OPTION VALUE="6">Futsal</option>
 				</SELECT>
 			</div>
 			<div class="form-group">
